Add: added setup.py and install from requirements.
- Added first draft of setup.py and requirements.txt file.
- Modularized latviz into utils, cli and main file.
- Added files for unit tests in future.
- Updated gitignore.
- Updated README.

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,23 @@
 .DS_Store
 .vscode/*
 
+# Various
+.eggs/
+latviz.egg-info/
+
+# Various dev files
+requirements-*.txt
+init_env.sh
+
 # Visit log
 visitlog.py
 
 # Temporary folders
 a/*
 c/*
+
+# Scratch and prototyping
+scratch
 
 # Input folders
 input/*
@@ -19,7 +30,17 @@ input/*
 # Python binaries
 *.pyc
 
+# Sublime project files
+*.sublime-*
+
 # Animation folder
 animations/
+animation_*
 array_source.py.bak
 configurations_data
+
+# Data
+old_data
+
+# Virtual env
+venv*
